temporarily use got 9 to implement releases

--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@types/duplexify": "3.6.0",
     "@types/from2": "2.3.0",
     "@types/glob": "7.1.1",
+    "@types/got": "9.6.9",
     "@types/inquirer": "6.0.3",
     "@types/jsonwebtoken": "8.3.8",
     "@types/jszip": "3.1.7",
@@ -107,9 +108,10 @@
     "date-fns": "1.30.1",
     "debug": "4.1.1",
     "fast-xml-parser": "3.16.0",
+    "form-data": "^3.0.0",
     "from2": "2.3.0",
     "glob": "7.1.6",
-    "got": "10.7.0",
+    "got": "9.6.0",
     "gradle-to-js": "2.0.0",
     "inquirer": "6.5.2",
     "iso8601-duration": "1.2.0",
