--- a/package.json
+++ b/package.json
@@ -73,9 +73,15 @@
     "@types/xml2js": "0.4.5",
     "@types/xmldom": "0.1.29",
     "@types/yazl": "2.4.2",
+    "@typescript-eslint/eslint-plugin": "2.26.0",
+    "@typescript-eslint/parser": "2.26.0",
     "autorest": "2.0.4407",
     "chai": "4.2.0",
     "chai-as-promised": "7.1.1",
+    "eslint": "6.8.0",
+    "eslint-config-prettier": "6.10.1",
+    "eslint-plugin-prettier": "3.1.2",
+    "eslint-plugin-security": "1.4.0",
     "gulp": "4.0.2",
     "gulp-clean": "0.4.0",
     "gulp-sourcemaps": "2.6.5",
@@ -84,6 +90,7 @@
     "mocha-junit-reporter": "1.23.3",
     "mock-require": "3.0.3",
     "nock": "12.0.3",
+    "prettier": "2.0.2",
     "sinon": "9.0.1",
     "ts-node": "8.8.1",
     "typescript": "3.8.3"
