--- a/package.json
+++ b/package.json
@@ -17,16 +17,17 @@
   },
   "preferGlobal": true,
   "scripts": {
-    "build": "npm run tslint && gulp build:raw",
-    "tslint": "",
-    "test": "npm run tslint && mocha --require ts-node/register ./test/**/*-test.[tj]s",
+    "build": "npm run lint && gulp build:raw",
+    "lint": "eslint \"src/**/*.ts\" \"test/**/*.ts\"",
+    "test": "npm run lint && mocha --require ts-node/register ./test/**/*-test.[tj]s",
     "test:ci": "mocha --require ts-node/register --reporter mocha-junit-reporter ./test/**/*-test.[tj]s",
     "watch-test": "mocha --require ts-node/register ./test/**/*-test.[tj]s --watch",
     "autorest:clean": "rimraf src/util/apis/generated",
     "autorest": "npm run autorest:clean && node scripts/autorest.js",
     "clean": "gulp clean",
-    "prepublishOnly": "npm run tslint && gulp prepublish",
-    "download-swagger": "gulp download-swagger"
+    "prepublishOnly": "npm run lint && gulp prepublish",
+    "download-swagger": "gulp download-swagger",
+    "prettier": "prettier --write \"**/*.+(js|ts)\""
   },
   "repository": {
     "type": "git",
