--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "preferGlobal": true,
   "scripts": {
     "build": "npm run lint && gulp build:raw",
-    "lint": "eslint \"src/**/*.ts\" \"scripts/**/*.js\" \"test/**/*.ts\"",
+    "lint": "eslint \"bin/**/*.js\" \"src/**/*.ts\" \"scripts/**/*.js\" \"test/**/*.ts\"",
     "lint-fix": "npm run lint -- --fix",
     "test": "npm run lint && mocha --require ts-node/register ./test/**/*-test.[tj]s",
     "test:ci": "mocha --require ts-node/register --reporter mocha-junit-reporter ./test/**/*-test.[tj]s",
