--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -40,12 +40,13 @@
       "console": "integratedTerminal",
       "request": "launch",
       "program": "${workspaceRoot}/src/index.ts",
-      "cwd": "${workspaceRoot}",
+      "cwd": "/Users/hagould/Code/johntestprod",
       "runtimeArgs": [
         "--nolazy"
       ],
       "args": [
-        // Add your Mobile Center CLI command
+        // "codepush", "release-react", "-a", "john-reed-org-1/johntest", "-t", "2.0", "-d", "test", "--env", "int", "--token", "69dd20c1b4343cfc1fca88f6ac773ac22faa573b"
+        "codepush", "release-react", "-a", "john-reed-prod-test/johntest-prod", "-t", "2.0", "-d", "test", "--env", "prod", "--token", "2fd831f313b9ac6858a7577d2d1ce19ae4b6521d"
       ],
       "outFiles": [
         "${workspaceRoot}/dist/**/*.js"
