--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "@types/temp": "0.8.34",
     "@types/through2": "2.0.34",
     "@types/unzipper": "0.10.3",
+    "@types/uuid": "7.0.3",
     "@types/which": "1.3.2",
     "@types/wordwrap": "1.0.0",
     "@types/xml2js": "0.4.5",
