--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -25,7 +25,7 @@ jobs:
       scanType: 'Register'
       verbosity: 'Verbose'
       alertWarningLevel: 'High'
-      failOnAlert: true
+      failOnAlert: false
       ignoreDirectories: '$(COMPONENT_GOVERNANCE_IGNORE_DIRS)'
     condition: and(succeeded(), eq(variables['Build.Reason'], 'PullRequest'))
 
