--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,11 +3,11 @@
     "module": "commonjs",
     "target": "es6",
     "outDir": "dist",
-    "noImplicitAny": true,
+    "noImplicitAny": false,
     "experimentalDecorators": true,
     "sourceMap": true,
     "allowJs": false,
-    "noUnusedLocals": true
+    "noUnusedLocals": false
   },
   "exclude": [
     "node_modules",
