--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "@types/mocha": "7.0.2",
     "@types/mock-require": "2.0.0",
     "@types/node": "10.*",
+    "@types/node-fetch": "^2.5.7",
     "@types/opener": "1.4.0",
     "@types/pumpify": "1.4.1",
     "@types/qs": "6.9.2",
