--- a/package.json
+++ b/package.json
@@ -100,6 +100,7 @@
     "typescript": "3.9.3"
   },
   "dependencies": {
+    "@types/uuid": "^8.0.0",
     "abort-controller": "^3.0.0",
     "appcenter-file-upload-client": "0.0.24",
     "azure-storage": "2.10.3",
@@ -137,9 +138,10 @@
     "strip-ansi": "6.0.0",
     "temp": "0.9.1",
     "through2": "3.0.1",
+    "typemoq": "^2.1.0",
     "unzipper": "0.10.11",
     "update-notifier": "4.1.0",
-    "uuid": "7.0.3",
+    "uuid": "^7.0.3",
     "webpack-cli": "3.3.11",
     "which": "2.0.2",
     "wordwrap": "1.0.0",
