--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "dist"
   ],
   "devDependencies": {
+    "@types/uuid": "^8.0.0",
     "@types/chai": "4.2.11",
     "@types/chai-as-promised": "7.1.2",
     "@types/debug": "4.1.5",
@@ -97,6 +98,7 @@
     "prettier": "2.0.5",
     "sinon": "9.0.2",
     "ts-node": "8.10.1",
+    "typemoq": "^2.1.0",
     "typescript": "3.9.3"
   },
   "dependencies": {
@@ -139,7 +141,7 @@
     "through2": "3.0.1",
     "unzipper": "0.10.11",
     "update-notifier": "4.1.0",
-    "uuid": "7.0.3",
+    "uuid": "^7.0.3",
     "webpack-cli": "3.3.11",
     "which": "2.0.2",
     "wordwrap": "1.0.0",
