--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
     "lint": "eslint \"bin/**/*.js\" \"src/**/*.ts\" \"scripts/**/*.js\" \"test/**/*.ts\"",
     "lint-fix": "npm run lint -- --fix",
     "test": "npm run lint && mocha --require ts-node/register ./test/**/*-test.[tj]s --timeout 4000",
-    "rebuild-test": "npm run build && npm run test",
     "test:ci": "mocha --require ts-node/register --reporter mocha-junit-reporter ./test/**/*-test.[tj]s",
     "watch-test": "mocha --require ts-node/register ./test/**/*-test.[tj]s --watch",
     "autorest:clean": "rimraf src/util/apis/generated",
@@ -141,7 +140,7 @@
     "through2": "3.0.1",
     "unzipper": "0.10.11",
     "update-notifier": "4.1.0",
-    "uuid": "^7.0.3",
+    "uuid": "7.0.3",
     "webpack-cli": "3.3.11",
     "which": "2.0.2",
     "wordwrap": "1.0.0",
