--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
     "build": "npm run lint && gulp build:raw",
     "lint": "eslint \"bin/**/*.js\" \"src/**/*.ts\" \"scripts/**/*.js\" \"test/**/*.ts\"",
     "lint-fix": "npm run lint -- --fix",
-    "test": "npm run lint && mocha --require ts-node/register ./test/**/*-test.[tj]s",
-    "test:ci": "mocha --require ts-node/register --reporter mocha-junit-reporter ./test/**/*-test.[tj]s",
+    "test": "npm run lint && mocha --require ts-node/register ./test/**/*-test.[tj]s --timeout 4000",
+    "test:ci": "mocha --require ts-node/register --reporter mocha-junit-reporter ./test/**/*-test.[tj]s --timeout 4000",
     "watch-test": "mocha --require ts-node/register ./test/**/*-test.[tj]s --watch",
     "autorest:clean": "rimraf src/util/apis/generated",
     "autorest": "npm run autorest:clean && node scripts/autorest.js",
@@ -46,6 +46,7 @@
     "dist"
   ],
   "devDependencies": {
+    "@types/uuid": "^8.0.0",
     "@types/chai": "4.2.11",
     "@types/chai-as-promised": "7.1.2",
     "@types/debug": "4.1.5",
@@ -59,6 +60,7 @@
     "@types/mocha": "7.0.2",
     "@types/mock-require": "2.0.0",
     "@types/node": "10.*",
+    "@types/node-fetch": "^2.5.7",
     "@types/opener": "1.4.0",
     "@types/pumpify": "1.4.1",
     "@types/qs": "6.9.3",
@@ -95,9 +97,11 @@
     "prettier": "2.0.5",
     "sinon": "9.0.2",
     "ts-node": "8.10.1",
+    "typemoq": "^2.1.0",
     "typescript": "3.9.3"
   },
   "dependencies": {
+    "abort-controller": "^3.0.0",
     "appcenter-file-upload-client": "0.0.24",
     "azure-storage": "2.10.3",
     "bplist": "0.0.4",
@@ -118,6 +122,7 @@
     "minimist": "1.2.5",
     "mkdirp": "1.0.4",
     "ms-rest": "2.5.4",
+    "node-fetch": "^2.6.0",
     "omelette": "0.4.12",
     "opener": "1.5.1",
     "p-limit": "2.3.0",
