--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -39,7 +39,7 @@ jobs:
     condition: and(succeeded(), ne(variables['Build.Reason'], 'PullRequest'))
 
   - script: |
-      npm run test:ci || [ -f './test-result.xml' ]
+      npm run test:ci || [ -f './test-results.xml' ]
     displayName: 'Run tests (with JUnit output)'
 
   - task: PublishTestResults@2
