--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -19,6 +19,15 @@ jobs:
       npm run build
     displayName: 'Install and build'
 
+  - script: |
+      cd appcenter-file-upload-client-node
+      npm install
+      npm install -g eslint
+      npm run build
+      npm run test
+      cd ..
+    displayName: 'Build and test appcenter-file-upload-client-node'
+
   - task: ComponentGovernanceComponentDetection@0
     displayName: Component Governance (PR)
     inputs:
