--- a/package.json
+++ b/package.json
@@ -104,7 +104,7 @@
   "dependencies": {
     "abort-controller": "^3.0.0",
     "appcenter-file-upload-client": "0.0.24",
-    "appcenter-file-upload-client-node": "file:../appcenter-fus-temp",
+    "appcenter-file-upload-client-node": "file:appcenter-file-upload-client-node",
     "azure-storage": "2.10.3",
     "bplist": "0.0.4",
     "chalk": "4.1.0",
