Use ac-fus-lib as npm package (#978)
It was decided to treat mc-fus as a separate library and publish it to npm without creating a separate repo.
This change makes it a proper library and moves to the root of the repo (for visibility).
Also did some minor renaming to differentiate it with the original mc-fus library for web.

This change also adds an additional step to CI that builds the library.
AB#81826

--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
   },
   "preferGlobal": true,
   "scripts": {
-    "build": "npm run lint && gulp build:raw",
+    "preinstall": "cd appcenter-file-upload-client-node && npm i",
+    "build-ac-fus": "cd appcenter-file-upload-client-node && npm run build",
+    "build": "npm run build-ac-fus && npm run lint && gulp build:raw",
     "lint": "eslint \"bin/**/*.js\" \"src/**/*.ts\" \"scripts/**/*.js\" \"test/**/*.ts\"",
     "lint-fix": "npm run lint -- --fix",
     "test": "npm run lint && mocha --require ts-node/register ./test/**/*-test.[tj]s --timeout 4000",
@@ -44,7 +46,10 @@
   "files": [
     "package-lock.json",
     "bin",
-    "dist"
+    "dist",
+    "appcenter-file-upload-client-node/out",
+    "appcenter-file-upload-client-node/package.json",
+    "appcenter-file-upload-client-node/package-lock.json"
   ],
   "devDependencies": {
     "@types/uuid": "^8.0.0",
