--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,9 +1,14 @@
 version: 2
 updates:
-  # Enable version updates for npm
+  # Enable version updates for npm on the main appcenter-cli package
   - package-ecosystem: "npm"
     # Look for `package.json` and `lock` files in the `root` directory
     directory: "/"
     # Check the npm registry for updates every weekday
+    schedule:
+      interval: "daily"
+  # Enable version updates for npm on the inner appcenter-file-upload-client-node package
+  - package-ecosystem: "npm"
+    directory: "/appcenter-file-upload-client-node"
     schedule:
       interval: "daily"
