--- a/appcenter-file-upload-client-node/package.json
+++ b/appcenter-file-upload-client-node/package.json
@@ -13,6 +13,7 @@
     "build": "npm run lint && npm run build:tsc",
     "build:tsc": "tsc --project tsconfig.json",
     "test": "npm run build && npm run mocha-tests",
+    "test:ci": "node_modules/mocha/bin/mocha --require ts-node/register --reporter mocha-junit-reporter ./tests/**/*-tests.[tj]s --timeout 4000",
     "mocha-tests": "node_modules/mocha/bin/mocha 'out/tests/unit/**/*tests.js'",
     "lint": "eslint \"src/**/*.ts\"",
     "lint-fix": "eslint \"src/**/*.ts\" --fix"
@@ -29,6 +30,7 @@
     "eslint-plugin-prettier": "3.1.3",
     "eslint-plugin-security": "1.4.0",
     "mocha": "7.1.1",
+    "mocha-junit-reporter": "2.0.0",
     "nock": "^13.0.2",
     "prettier": "2.0.4",
     "ts-node": "8.9.1",
