--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,13 +17,7 @@ jobs:
   - script: |
       npm ci
       npm run build
-    displayName: 'Install and build CLI'
-
-  - script: |
-      npm ci
-      npm run build
-    displayName: 'Install and build appcenter-file-upload-client-node'
-    workingDirectory: appcenter-file-upload-client-node
+    displayName: 'Install and build'
 
   - task: ComponentGovernanceComponentDetection@0
     displayName: Component Governance (PR)
