--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -40,7 +40,7 @@ jobs:
 
   - script: |
       npm run test:ci || [ -f './test-results.xml' ]
-    displayName: 'Run tests (with JUnit output)'
+    displayName: 'Run CLI tests (with JUnit output)'
 
   - task: PublishTestResults@2
     inputs:
@@ -48,8 +48,22 @@ jobs:
       testResultsFiles: 'test-results.xml'
       searchFolder: '$(Build.SourcesDirectory)'
       failTaskOnFailedTests: true
-      testRunTitle: 'Verify unit test result'
-    displayName: 'Verify unit test result'
+      testRunTitle: 'CLI unit tests'
+    displayName: 'Verify CLI unit test result'
+
+  - script: |
+      npm run test:ci || [ -f './test-results.xml' ]
+    displayName: 'Run appcenter-file-upload-client-node tests'
+    workingDirectory: appcenter-file-upload-client-node
+
+  - task: PublishTestResults@2
+    inputs:
+      testResultsFormat: 'JUnit'
+      testResultsFiles: 'test-results.xml'
+      searchFolder: '$(Build.SourcesDirectory)/appcenter-file-upload-client-node'
+      failTaskOnFailedTests: true
+      testRunTitle: 'appcenter-file-upload-client-node unit tests'
+    displayName: 'Verify appcenter-file-upload-client-node unit test result'
 
   - task: AzureKeyVault@1
     inputs:
@@ -74,7 +88,7 @@ jobs:
       testResultsFiles: 'testresult.xml'
       searchFolder: '$(Build.SourcesDirectory)/test/functional'
       failTaskOnFailedTests: true
-      testRunTitle: 'Verify functional test result'
+      testRunTitle: 'Functional tests'
     displayName: 'Verify functional test result'
 
   - script: |
