--- a/appcenter-file-upload-client-node/package.json
+++ b/appcenter-file-upload-client-node/package.json
@@ -31,7 +31,7 @@
     "eslint-plugin-security": "1.4.0",
     "mocha": "7.1.1",
     "mocha-junit-reporter": "2.0.0",
-    "nock": "^13.0.2",
+    "nock": "13.0.3",
     "prettier": "2.0.4",
     "ts-node": "8.9.1",
     "typemoq": "2.1.0",
@@ -39,7 +39,7 @@
     "uuid": "7.0.3"
   },
   "dependencies": {
-    "abort-controller": "^3.0.0",
-    "node-fetch": "^2.6.0"
+    "abort-controller": "3.0.0",
+    "node-fetch": "2.6.0"
   }
 }
