Revert "Use ac-fus-lib as npm package (#978)"
This reverts commit 987b30d1df7ec5f2a0ffbd7b3eaca3e94cc3161e.

Running `npm install` as part of `npm preinstall` leads to problems when running as root on Linux.

--- a/package.json
+++ b/package.json
@@ -17,9 +17,7 @@
   },
   "preferGlobal": true,
   "scripts": {
-    "preinstall": "cd appcenter-file-upload-client-node && npm i",
-    "build-ac-fus": "cd appcenter-file-upload-client-node && npm run build",
-    "build": "npm run build-ac-fus && npm run lint && gulp build:raw",
+    "build": "npm run lint && gulp build:raw",
     "lint": "eslint \"bin/**/*.js\" \"src/**/*.ts\" \"scripts/**/*.js\" \"test/**/*.ts\"",
     "lint-fix": "npm run lint -- --fix",
     "test": "npm run lint && mocha --require ts-node/register ./test/**/*-test.[tj]s --timeout 4000",
@@ -46,10 +44,7 @@
   "files": [
     "package-lock.json",
     "bin",
-    "dist",
-    "appcenter-file-upload-client-node/out",
-    "appcenter-file-upload-client-node/package.json",
-    "appcenter-file-upload-client-node/package-lock.json"
+    "dist"
   ],
   "devDependencies": {
     "@types/uuid": "^8.0.0",
