Revert "Test appcenter-file-upload-client-node package in build pipeline (#1003)"
This reverts commit 87b546a2c4f5de8c9f113df02d5c5cd1396a8ae6.

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -40,7 +40,7 @@ jobs:
 
   - script: |
       npm run test:ci || [ -f './test-results.xml' ]
-    displayName: 'Run CLI tests (with JUnit output)'
+    displayName: 'Run tests (with JUnit output)'
 
   - task: PublishTestResults@2
     inputs:
@@ -48,22 +48,8 @@ jobs:
       testResultsFiles: 'test-results.xml'
       searchFolder: '$(Build.SourcesDirectory)'
       failTaskOnFailedTests: true
-      testRunTitle: 'CLI unit tests'
-    displayName: 'Verify CLI unit test result'
-
-  - script: |
-      npm run test:ci || [ -f './test-results.xml' ]
-    displayName: 'Run appcenter-file-upload-client-node tests'
-    workingDirectory: appcenter-file-upload-client-node
-
-  - task: PublishTestResults@2
-    inputs:
-      testResultsFormat: 'JUnit'
-      testResultsFiles: 'test-results.xml'
-      searchFolder: '$(Build.SourcesDirectory)/appcenter-file-upload-client-node'
-      failTaskOnFailedTests: true
-      testRunTitle: 'appcenter-file-upload-client-node unit tests'
-    displayName: 'Verify appcenter-file-upload-client-node unit test result'
+      testRunTitle: 'Unit tests'
+    displayName: 'Verify unit test result'
 
   - task: AzureKeyVault@1
     inputs:
@@ -76,7 +62,7 @@ jobs:
       filePath: '$(Build.SourcesDirectory)/test/functional/Invoke-FunctionalTests.ps1'
       arguments: '-Token $(ac-cli-account-api-token)'
       pwsh: true
-    displayName: 'Run functional tests'
+    displayName: 'Functional tests'
 
   - script: |
       [ -f './test/functional/testresult.xml' ]
@@ -88,7 +74,7 @@ jobs:
       testResultsFiles: 'testresult.xml'
       searchFolder: '$(Build.SourcesDirectory)/test/functional'
       failTaskOnFailedTests: true
-      testRunTitle: 'Functional tests'
+      testRunTitle: 'Verify functional test result'
     displayName: 'Verify functional test result'
 
   - script: |
