--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
   },
   "preferGlobal": true,
   "scripts": {
-    "build": "npm run lint && gulp build:raw",
+    "preinstall": "cd appcenter-file-upload-client-node && npm i",
+    "build-ac-fus": "cd appcenter-file-upload-client-node && npm run build",
+    "build": "npm run build-ac-fus && npm run lint && gulp build:raw",
     "lint": "eslint \"bin/**/*.js\" \"src/**/*.ts\" \"scripts/**/*.js\" \"test/**/*.ts\"",
     "lint-fix": "npm run lint -- --fix",
     "test": "npm run lint && mocha --require ts-node/register ./test/**/*-test.[tj]s --timeout 4000",
@@ -44,7 +46,10 @@
   "files": [
     "package-lock.json",
     "bin",
-    "dist"
+    "dist",
+    "appcenter-file-upload-client-node/out",
+    "appcenter-file-upload-client-node/package.json",
+    "appcenter-file-upload-client-node/package-lock.json"
   ],
   "devDependencies": {
     "@types/uuid": "^8.0.0",
@@ -103,6 +108,7 @@
   },
   "dependencies": {
     "abort-controller": "^3.0.0",
+    "appcenter-file-upload-client-node": "1.0.0",
     "appcenter-file-upload-client": "0.0.24",
     "azure-storage": "2.10.3",
     "bplist": "0.0.4",
