--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
   },
   "preferGlobal": true,
   "scripts": {
-    "build-ac-fus": "cd appcenter-file-upload-client-node && npm run build",
-    "build": "npm run build-ac-fus && npm run lint && gulp build:raw",
+    "build": "npm run lint && gulp build:raw",
     "lint": "eslint \"bin/**/*.js\" \"src/**/*.ts\" \"scripts/**/*.js\" \"test/**/*.ts\"",
     "lint-fix": "npm run lint -- --fix",
     "test": "npm run lint && mocha --require ts-node/register ./test/**/*-test.[tj]s --timeout 4000",
