--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -58,6 +58,12 @@ jobs:
     workingDirectory: appcenter-file-upload-client-node
 
   - script: |
+      npm pack
+      npm install -g appcenter-cli*.tgz
+    displayName: 'Package appcenter-file-upload-client-node'
+    workingDirectory: appcenter-file-upload-client-node
+
+  - script: |
       npm run test:ci || [ -f './test-results.xml' ]
     displayName: 'Run appcenter-file-upload-client-node tests'
     workingDirectory: appcenter-file-upload-client-node
