--- a/appcenter-file-upload-client-node/package.json
+++ b/appcenter-file-upload-client-node/package.json
@@ -1,6 +1,6 @@
 {
   "name": "appcenter-file-upload-client-node",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "File Uploader Client for Node",
   "homepage": "https://github.com/microsoft/appcenter-cli",
   "author": "Microsoft",
@@ -12,27 +12,27 @@
   "scripts": {
     "build": "npm run lint && npm run build:tsc",
     "build:tsc": "tsc --project tsconfig.json",
-    "test": "npm run build && npm run mocha-tests",
-    "test:ci": "node_modules/mocha/bin/mocha --require ts-node/register --reporter mocha-junit-reporter ./tests/**/*-tests.[tj]s --timeout 4000",
-    "mocha-tests": "node_modules/mocha/bin/mocha 'out/tests/unit/**/*tests.js'",
     "lint": "eslint \"src/**/*.ts\"",
-    "lint-fix": "eslint \"src/**/*.ts\" --fix"
+    "lint-fix": "eslint \"src/**/*.ts\" --fix",
+    "prettier": "prettier --write \"**/*.+(js|ts)\"",
+    "test": "npm run build:tsc && mocha 'out/tests/unit/**/*tests.js'",
+    "test:ci": "node_modules/mocha/bin/mocha --require ts-node/register --reporter mocha-junit-reporter ./tests/**/*-tests.[tj]s --timeout 4000"
   },
   "main": "out/index.js",
   "devDependencies": {
-    "@types/mocha": "8.0.2",
-    "@types/node": "13.11.1",
+    "@types/mocha": "8.0.3",
+    "@types/node": "10.x",
     "@types/uuid": "7.0.3",
-    "@typescript-eslint/eslint-plugin": "2.28.0",
-    "@typescript-eslint/parser": "2.28.0",
-    "eslint": "6.8.0",
-    "eslint-config-prettier": "6.10.1",
-    "eslint-plugin-prettier": "3.1.3",
+    "@typescript-eslint/eslint-plugin": "3.10.1",
+    "@typescript-eslint/parser": "3.10.1",
+    "eslint": "7.7.0",
+    "eslint-config-prettier": "6.11.0",
+    "eslint-plugin-prettier": "3.1.4",
     "eslint-plugin-security": "1.4.0",
-    "mocha": "8.1.1",
+    "mocha": "8.1.2",
     "mocha-junit-reporter": "2.0.0",
-    "nock": "13.0.3",
-    "prettier": "2.0.4",
+    "nock": "13.0.4",
+    "prettier": "2.1.1",
     "ts-node": "8.9.1",
     "typemoq": "2.1.0",
     "typescript": "3.8.3",
