--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -33,10 +33,10 @@
       },
       "console": "internalConsole",
       "outFiles": []
-    },
+    },    
     {
       "name": "Launch with sourcemaps",
-      "type": "node2",
+      "type": "node",
       "console": "integratedTerminal",
       "request": "launch",
       "program": "${workspaceRoot}/src/index.ts",
@@ -45,17 +45,36 @@
         "--nolazy"
       ],
       "args": [
-        // Add your Mobile Center CLI command
+        // Add your App Center CLI command
       ],
       "outFiles": [
         "${workspaceRoot}/dist/**/*.js"
       ],
       "sourceMaps": true,
       "preLaunchTask": "build-sourcemaps"
+    }, 
+    // Debugger when sourcemaps don't need to be built again
+    {
+      "name": "Launch without building sourcemaps",
+      "type": "node",
+      "console": "integratedTerminal",
+      "request": "launch",
+      "program": "${workspaceRoot}/src/index.ts",
+      "cwd": "${workspaceRoot}",
+      "runtimeArgs": [
+        "--nolazy"
+      ],
+      "args": [
+       // Add your App Center CLI command
+      ],
+      "outFiles": [
+        "${workspaceRoot}/dist/**/*.js"
+      ],
+      "sourceMaps": true
     },
     {
       "name": "Attach",
-      "type": "node2",
+      "type": "node",
       "request": "attach",
       "port": 5858,
       "address": "localhost",
@@ -67,7 +86,7 @@
     },
     {
       "name": "Attach to Process",
-      "type": "node2",
+      "type": "node",
       "request": "attach",
       "processId": "${command.PickProcess}",
       "port": 5858,
