--- a/package.json
+++ b/package.json
@@ -47,7 +47,6 @@
     "dist"
   ],
   "devDependencies": {
-    "@types/uuid": "^8.0.0",
     "@types/chai": "4.2.12",
     "@types/chai-as-promised": "7.1.3",
     "@types/debug": "4.1.5",
@@ -73,6 +72,7 @@
     "@types/temp": "0.8.34",
     "@types/through2": "2.0.36",
     "@types/unzipper": "0.10.3",
+    "@types/uuid": "^8.0.0",
     "@types/which": "1.3.2",
     "@types/wordwrap": "1.0.0",
     "@types/xml2js": "0.4.5",
@@ -103,8 +103,8 @@
   },
   "dependencies": {
     "abort-controller": "^3.0.0",
-    "appcenter-file-upload-client-node": "1.0.0",
     "appcenter-file-upload-client": "0.0.24",
+    "appcenter-file-upload-client-node": "file:appcenter-file-upload-client-node",
     "azure-storage": "2.10.3",
     "bplist": "0.0.4",
     "chalk": "4.1.0",
