--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "preferGlobal": true,
   "scripts": {
+    "preinstall": "npm i appcenter-file-upload-client*.tgz",
     "build": "npm run lint && gulp build:raw",
     "lint": "eslint \"bin/**/*.js\" \"src/**/*.ts\" \"scripts/**/*.js\" \"test/**/*.ts\"",
     "lint-fix": "npm run lint -- --fix",
@@ -104,7 +105,7 @@
   "dependencies": {
     "abort-controller": "^3.0.0",
     "appcenter-file-upload-client": "0.0.24",
-    "appcenter-file-upload-client-node": "file:appcenter-file-upload-client-node",
+    "appcenter-file-upload-client-node": "file:appcenter-file-upload-client-node-1.0.1.tgz",
     "azure-storage": "2.10.3",
     "bplist": "0.0.4",
     "chalk": "4.1.0",
