--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "preferGlobal": true,
   "scripts": {
+    "preinstall": "npm i appcenter-file-upload-client*.tgz",
     "build": "npm run lint && gulp build:raw",
     "lint": "eslint \"bin/**/*.js\" \"src/**/*.ts\" \"scripts/**/*.js\" \"test/**/*.ts\"",
     "lint-fix": "npm run lint -- --fix",
