--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "dist"
   ],
   "devDependencies": {
-    "@types/uuid": "^8.0.0",
+    "@types/uuid": "8.0.0",
     "@types/chai": "4.2.12",
     "@types/chai-as-promised": "7.1.3",
     "@types/debug": "4.1.5",
@@ -62,7 +62,7 @@
     "@types/mocha": "8.0.3",
     "@types/mock-require": "2.0.0",
     "@types/node": "10.*",
-    "@types/node-fetch": "^2.5.7",
+    "@types/node-fetch": "2.5.7",
     "@types/opener": "1.4.0",
     "@types/pumpify": "1.4.1",
     "@types/qs": "6.9.4",
@@ -99,11 +99,11 @@
     "prettier": "2.0.5",
     "sinon": "9.0.3",
     "ts-node": "8.10.2",
-    "typemoq": "^2.1.0",
+    "typemoq": "2.1.0",
     "typescript": "4.0.2"
   },
   "dependencies": {
-    "abort-controller": "^3.0.0",
+    "abort-controller": "3.0.0",
     "appcenter-file-upload-client-node": "1.1.1",
     "appcenter-file-upload-client": "0.0.24",
     "azure-storage": "2.10.3",
@@ -125,7 +125,7 @@
     "minimist": "1.2.5",
     "mkdirp": "1.0.4",
     "ms-rest": "2.5.4",
-    "node-fetch": "^2.6.0",
+    "node-fetch": "2.6.0",
     "omelette": "0.4.12",
     "opener": "1.5.2",
     "p-limit": "3.0.2",
