Update path-parse dependency

--- a/package.json
+++ b/package.json
@@ -151,6 +151,7 @@
     "xcode": "3.0.1",
     "xml2js": "0.4.23",
     "xmldom": "0.6.0",
-    "yazl": "2.5.1"
+    "yazl": "2.5.1",
+    "path-parse": "1.0.7"
   }
 }
