--- a/package.json
+++ b/package.json
@@ -104,6 +104,7 @@
     "typescript": "4.3.5"
   },
   "dependencies": {
+    "@xmldom/xmldom": "0.7.2",
     "abort-controller": "3.0.0",
     "appcenter-file-upload-client": "0.0.24",
     "appcenter-file-upload-client-node": "1.2.1",
@@ -150,7 +151,6 @@
     "wordwrap": "1.0.0",
     "xcode": "3.0.1",
     "xml2js": "0.4.23",
-    "xmldom": "0.6.0",
     "yazl": "2.5.1"
   }
 }
