--- a/package.json
+++ b/package.json
@@ -146,11 +146,12 @@
     "unzipper": "0.10.11",
     "update-notifier": "5.1.0",
     "uuid": "7.0.3",
-    "webpack-cli": "3.3.12",
+    "webpack-cli": "4.8.0",
     "which": "2.0.2",
     "wordwrap": "1.0.0",
     "xcode": "3.0.1",
     "xml2js": "0.4.23",
-    "yazl": "2.5.1"
+    "yazl": "2.5.1",
+    "glob-watcher": "5.0.5"
   }
 }
