--- a/package.json
+++ b/package.json
@@ -49,7 +49,6 @@
     "dist"
   ],
   "devDependencies": {
-    "@types/uuid": "8.0.0",
     "@types/chai": "4.2.22",
     "@types/chai-as-promised": "7.1.4",
     "@types/debug": "4.1.7",
@@ -75,6 +74,7 @@
     "@types/temp": "0.9.1",
     "@types/through2": "2.0.36",
     "@types/unzipper": "0.10.4",
+    "@types/uuid": "8.0.0",
     "@types/which": "2.0.1",
     "@types/wordwrap": "1.0.1",
     "@types/xml2js": "0.4.9",
@@ -107,7 +107,7 @@
     "@xmldom/xmldom": "0.7.5",
     "abort-controller": "3.0.0",
     "appcenter-file-upload-client": "0.0.24",
-    "appcenter-file-upload-client-node": "1.2.2",
+    "appcenter-file-upload-client-node": "^1.2.2",
     "azure-storage": "2.10.4",
     "bplist": "0.0.4",
     "chalk": "4.1.2",
@@ -118,6 +118,7 @@
     "fast-xml-parser": "3.20.0",
     "from2": "2.3.0",
     "glob": "7.1.7",
+    "glob-watcher": "5.0.5",
     "gradle-to-js": "2.0.0",
     "inquirer": "8.1.5",
     "iso8601-duration": "1.3.0",
@@ -151,7 +152,6 @@
     "wordwrap": "1.0.0",
     "xcode": "3.0.1",
     "xml2js": "0.4.23",
-    "yazl": "2.5.1",
-    "glob-watcher": "5.0.5"
+    "yazl": "2.5.1"
   }
 }
