--- a/package.json
+++ b/package.json
@@ -115,6 +115,7 @@
     "cli-table3": "0.6.1",
     "date-fns": "2.28.0",
     "debug": "4.3.3",
+    "es5-ext": "0.10.53",
     "fast-xml-parser": "3.21.1",
     "from2": "2.3.0",
     "glob": "7.2.0",
