--- a/src/commands/test/lib/templates/appium/ios/pom.xml
+++ b/src/commands/test/lib/templates/appium/ios/pom.xml
@@ -24,6 +24,11 @@
       <artifactId>appium-test-extension</artifactId>
       <version>1.6</version>
     </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-beans</artifactId>
+      <version>5.3.18</version>
+    </dependency>
   </dependencies>
 
   <profiles>
