--- a/src/commands/test/lib/templates/appium/android/pom.xml
+++ b/src/commands/test/lib/templates/appium/android/pom.xml
@@ -25,6 +25,12 @@
       <version>1.6</version>
     </dependency>
   </dependencies>
+  <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-beans</artifactId>
+      <version>5.3.18</version>
+    </dependency>
+  </dependencies>
 
   <profiles>
     <profile>
