--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "appcenter-cli",
+  "name": "@data4life/appcenter-cli",
   "version": "2.11.0",
   "description": "Command line tool for Visual Studio App Center",
   "keywords": [
@@ -13,7 +13,7 @@
   },
   "main": "dist/index.js",
   "bin": {
-    "appcenter": "./bin/appcenter.js"
+    "appcenter": "bin/appcenter.js"
   },
   "preferGlobal": true,
   "scripts": {
@@ -36,7 +36,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/microsoft/appcenter-cli.git"
+    "url": "git+https://github.com/gesundheitscloud/appcenter-cli.git"
   },
   "author": "Microsoft",
   "license": "MIT",
@@ -153,5 +153,8 @@
     "xcode": "3.0.1",
     "xml2js": "0.4.23",
     "yazl": "2.5.1"
+  },
+  "directories": {
+    "test": "test"
   }
 }
