--- a/src/commands/test/lib/templates/uitest/android/AppCenter.UITest.Android/AppCenter.UITest.Android.csproj
+++ b/src/commands/test/lib/templates/uitest/android/AppCenter.UITest.Android/AppCenter.UITest.Android.csproj
@@ -26,6 +26,8 @@
     <ConsolePause>false</ConsolePause>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="NUnit3TestAdapter" Version="4.3.1" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.4.1" />
     <PackageReference Include="NUnit" Version="3.13.3" />
     <PackageReference Include="Xamarin.UITest" Version="4.1.0" />
   </ItemGroup>
