--- a/appcenter-cli-1ES.yml
+++ b/appcenter-cli-1ES.yml
@@ -1,5 +1,10 @@
 trigger: none
 
+variables: 
+  API_TOKEN_KEY_VAULT: 'distributionStoresInt'
+  API_TOKEN_KEY_VAULT_AZURE_SUBSCRIPTION: 'App Center - INT (f4147d36-1601-4338-ae2c-693eb61b75d8)'
+  COMPONENT_GOVERNANCE_IGNORE_DIRS: 'src/commands/test/lib/templates/appium,dist/commands/test/lib/templates/appium'
+
 resources:
   repositories:
   - repository: 1ESPipelineTemplates
