--- a/appcenter-cli-1ES.yml
+++ b/appcenter-cli-1ES.yml
@@ -4,7 +4,7 @@ variables:
 - name: API_TOKEN_KEY_VAULT
   value: 'distributionStoresInt'
 - name: API_TOKEN_KEY_VAULT_AZURE_SUBSCRIPTION
-  value: 'App Center - INT (f4147d36-1601-4338-ae2c-693eb61b75d8)'
+  value: 'App Center - INT'
 - name: COMPONENT_GOVERNANCE_IGNORE_DIRS
   value: 'src/commands/test/lib/templates/appium,dist/commands/test/lib/templates/appium'
 
